# downloaddaemon

./: .gitignore  AUTHORS  CHANGES  CMakeLists.txt  DEVELOPING  INSTALLING  LICENSE  README.md  TODO  build.sh  ddconsole  ls-410d.cmake  pbcopy  pc.cmake  pi2.cmake
doc/: protocol_spec  writing_plugins  writing_reconnectors
doc/www/: downloads.html  get_ip.php  index.html  screenshots.html  style.css
etc/downloaddaemon/: premium_accounts.conf
etc/init.d/: downloadd
include_downloadd/: config.h
output/: DownloadDaemon
output/etc/downloaddaemon/: downloaddaemon.conf
output/include_downloadd/: config.h
share/applications/: ddclient-gui.desktop
share/ddclient-gui/lang/: Deutsch  Espanol  Original
share/downloaddaemon/reconnect/: !AVM - !FRITZ BOX (All via UPNP)  3com - 3com office connect 3CRWE754G72-B FW  1.29  ALL130DSL - ALL130DSL (FW 2.00.01)  ALL130DSLA - ALL130DSLA (FW 0.01.03)  AMIT - AMIT IP Sharer HiP400 (FW 1.93p)  ARK - ARK IS-104,Bestech IBR400+,LinkPro BR-401,LinkPro BR-801,Mentor FR4  ASUS - ASUS WL-500GP  ASUS - ASUS WL-500g WL-500b 1.8.2.1  ASUS - ASUS WL-500g WL-500g Premium  AVM - AVM Fritz!Box Fon (FW. 06.04.15)  AVM - AVM Fritz!Box Fon Speedport W 501V (FW. 28.04.08 modded)  AVM - AVM Fritz!Box Fon WLAN 7141 (FW. 40.04.30)  AVM - AVM Fritz!Box Fon WLAN 7170 (FW 29.04.06 15)  AVM - AVM Fritz!Box SL WLAN  Acer - Acer WLAN 11g Broadband Router (Modell  WLAN-G-RU2) Englische Firmware  Acer - Acer WLAN 11g Broadband Router 54MBit (Modell  WLAN-G-RU2)  Acer - Acer Warplink Firewall Router  Actiontec - Actiontec PK5000  Allnet - Allnet ALL0277 Firmware Version 1.02 Release 5  Allnet - Allnet ALL0277DSL Firmware Version 2.10.02  Allnet - Allnet ALL1294B Firmw. 1.0 Rel.12  Arcor - Arcor WLAN 200  Astranet-Modem - Astranet-Modem SoftwareVersion1.1  Belkin - Belkin 54g Deutsch, Modell  F5D7630de4B  Billion - Billion BIPAC-741 ADSL  Billion - Billion BIPAC743-GE  Billion - Billion Bipac 640-AE  Billion - Billion Bipac 7500G  Billion - Billion Bipac-640SE  Broadband - Broadband xDSL Cable SOHO Router  Buffalo - Buffalo WBR-G54  Buffalo - Buffalo WHR-G54S  Comtrend - 536+  (+197 more)
share/pixmaps/: ddclient-gui.xpm
src/: CMakeLists.txt  CheckCxx11.cmake  Doxyfile
src/daemon/: CMakeLists.txt  config.h.cmake  downloaddaemon.cpp  global.h
src/daemon/dl/: curl_speeder.cpp  curl_speeder.h  download.cpp  download.h  download_container.cpp  download_container.h  package_container.cpp  package_container.h  package_extractor.cpp  package_extractor.h  plugin_container.cpp  plugin_container.h  recursive_parser.cpp  recursive_parser.h
src/daemon/include_downloadd/: config.h
src/daemon/include_downloadd-plugins/: config.h
src/daemon/mgmt/: connection_manager.cpp  connection_manager.h  global_management.cpp  global_management.h  mgmt_thread.cpp  mgmt_thread.h
src/daemon/plugins/: CMakeLists.txt  bierdopje_com.cpp  bitload_com.cpp  captcha.cpp  captcha.h  depositfiles_com.cpp  duckload_com.cpp  easybytez_com.cpp  filefactory_com.cpp  files_mail_ru.cpp  fileserve_com.cpp  filesonic_com.cpp  fshare_vn.cpp  gamefront_com.cpp  hd-bb_org.cpp  hotfile_com.cpp  ifile_it.cpp  iload_to.cpp  linksafe_me.cpp  linksave_in.cpp  load_to.cpp  mediafire_com.cpp  multiupload_com.cpp  netfolder_in.cpp  netload_in.cpp  plugin_helpers.h  plugin_testing.cpp  putlocker_com.cpp  rapidshare_com.cpp  relink_us.cpp  safelinking_net.cpp  serienjunkies_org.cpp  share-online_biz.cpp  shragle_com.cpp  uploaded_net.cpp  x7_to.cpp  yourfiles_to.cpp  youtube_com.cpp  zshare_net.cpp
src/daemon/reconnect/: reconnect_parser.cpp  reconnect_parser.h
src/daemon/tools/: curl_callbacks.cpp  curl_callbacks.h  helperfunctions.cpp  helperfunctions.h
src/ddclient-gui/: .gitignore  CMakeLists.txt  config.h.cmake  ddclient_gui.cpp  ddclient_gui.h  ddclient_gui_about_dialog.cpp  ddclient_gui_about_dialog.h  ddclient_gui_add_dialog.cpp  ddclient_gui_add_dialog.h  ddclient_gui_captcha_dialog.cpp  ddclient_gui_captcha_dialog.h  ddclient_gui_configure_dialog.cpp  ddclient_gui_configure_dialog.h  ddclient_gui_connect_dialog.cpp  ddclient_gui_connect_dialog.h  ddclient_gui_list_handling.cpp  ddclient_gui_list_handling.h  ddclient_gui_main_window.h  ddclient_gui_status_bar.cpp  ddclient_gui_status_bar.h  ddclient_gui_update_thread.cpp  ddclient_gui_update_thread.h  ddgui.rc  main.cpp
src/ddclient-gui/include_ddclient-gui/: config.h
src/ddclient-php/: index.php
src/ddclient-php/inc/: _config.inc.php  functions.inc.php  template.inc.php
src/ddclient-php/lang/: de.php  en.php  es.php
src/ddclient-php/sites/: add.php  adv_config.php  conf_premium.php  conf_reconnect.php  config.php  dl_edit.php  get_captcha.php  login.php  logout.php  manage.php  pkg_edit.php
src/ddclient-php/templates/default/: add.htm  adv_config.htm  conf_premium.htm  conf_reconnect.htm  config.htm  dl_edit.htm  footer.htm  get_captcha.htm  header.htm  login.htm  manage.htm  manage_line.htm  pkg_edit.htm
src/ddclient-php/templates/default/css/: style.css
src/ddconsole/: .gitignore  CMakeLists.txt  ddconsole.cpp
src/include/: config.h  ddcurl.h
src/include/cfgfile/: cfgfile.cpp  cfgfile.h
src/include/crypt/: md5.cpp  md5.h
src/include/crypt/AES/: aes.h  aes_cbc.cpp  aes_cfb.cpp  aes_core.cpp  aes_locl.h
src/include/downloadc/: client_exception.cpp  client_exception.h  downloadc.cpp  downloadc.h
src/include/language/: language.cpp  language.h
src/include/netpptk/: netpptk.cpp  netpptk.h
src/include/reg_ex/: reg_ex.cpp  reg_ex.h  trex.cpp
tools/: commit_with_pw.expect  daily-autobuild.sh  ddproxy.php  make_clients.sh  make_daemon.sh  make_version.sh  rules_tpl  svn_with_pw.expect
tools/dir825/: build_dd.sh  dir825.cmake
tools/flashgot/: add_download.bat  add_download.sh
tools/ix4-armel/: build_DD.sh  upload_ftp.sh  upload_svn.sh  wdtv-live.cmake
tools/jdownloader-router-converter/: jd-extractor.cpp  jd-router-convert.cpp
tools/ls-410d/: .gitattributes  build_DD.sh  ls-410d.cmake
tools/pc/: make_xml.sh  test.sh
tools/wdtv-live/: build_DD.sh  make_app.sh  upload_ftp.sh  upload_svn.sh  wdtv-live.cmake
(+2 files in other folders)
